sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '(' expected but identifier found.
    for i <-0 to getNombreValeurs()-2 {
        ^AlgBubbleSort1:14: error: illegal start of simple expression
  }
  ^