sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var estTriee = false
  while (!estTriee) {
    estTriee=true
    var a = 0
    var b = 0
    for i <-0 to getNombreValeurs()-2 {
      if !plusPetit(i,i+1){
        echange(i,i+1)
        estTriee=false
      }
    }
  }
}